pvc_pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-check-pod
spec:
  containers:

  - name: mypod
    image: https://gitlab.nrp-nautilus.io/martinezci/img-processor:latest

    resources:
      limits:
        memory: 100Mi
        cpu: 100m
      requests:
        memory: 100Mi
        cpu: 100m

    volumeMounts:
    - mountPath: /examplevol
      name: examplevol
    command: ["sh", "-c", "sleep infinity"]
    
  volumes:
    - name: examplevol
      persistentVolumeClaim:
        claimName: my-pvc-name
